oracle-database-chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oracle-db-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
