oracle-database-chart/templates/service.yaml
# templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-oracle-database-connection-service
spec:
  selector:
    app: oracle-db-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
